[package]
name = "rust-again-1"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }  # <-- important for serialization
serde = { version = "1.0", features = ["derive"] }


